<resources>
    <string name="app_name">JGIx</string>
    <string name="action_usn">Enter Your USN</string>
    <string name="action_name">Enter Your Name</string>
    <string name="action_passward">Your Password</string>
    <string name="action_repassword">Confirm Password</string>
    <string name="action_mobile">Enter Mobile No.</string>
    <string name="action_stream">Stream CTMA/CTIS/IOT/DS</string>


    <string name="action_CTMA">CTMA</string>
    <string name="action_CTIS">CTIS</string>
    <string name="action_IOT">IOT</string>
    <string name="title_activity_main2">JGI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sidhartha Sekhar</string>
    <string name="nav_header_subtitle">sidhartha_sekhar_123@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_contactdeveloper">Developers</string>
    <string name="action_report">Report</string>


    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_suggestion">Suggestion</string>
    <string name="menu_results">Results</string>
    <string name="menu_share">Share</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_outpass">Outpass</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_events">Events</string>


    <string name="texton">ON</string>
    <string name="textoff">OFF</string>
</resources>
