<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/notification"
        android:title="notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_Developers"
        android:orderInCategory="100"
        android:title="@string/action_contactdeveloper"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="@string/action_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
