<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient2"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:gravity="center">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:src="@drawable/jgilogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#fff"
            android:textStyle="italic"
            android:text="Welcome to Jain College "/>
        <EditText
            android:id="@+id/ed1"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:gravity=""
            android:inputType="textEmailAddress"
            android:backgroundTint="#fff"
            android:layout_margin="20dp"
             android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="5dp"
            android:background="@drawable/strokeboarder"
            android:hint="Enter E-Mail"
            />
        <EditText
            android:id="@+id/ed2"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:inputType="textPassword"
            android:backgroundTint="#fff"

            android:background="@drawable/strokeboarder"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/action_passward"/>

        <EditText
            android:id="@+id/ed3"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@drawable/strokeboarder"
            android:layout_margin="20dp"
            android:inputType="textPassword"
            android:backgroundTint="#fff"

            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/action_repassword"/>
        <EditText
            android:id="@+id/passcode"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@drawable/strokeboarder"
            android:layout_marginBottom="20dp"
            android:inputType="number"
            android:backgroundTint="#fff"
            android:maxLength="4"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="5dp"
            android:hint="Enter Passcode"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:id="@+id/ed4"
            android:inputType="text"
            android:backgroundTint="#fff"
            android:background="@drawable/strokeboarder"
            android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="5dp"
            android:hint="@string/action_name"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_margin="20dp"
            android:id="@+id/ed5"
            android:inputType="text"
            android:backgroundTint="#fff"
            android:background="@drawable/strokeboarder"
            android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="5dp"
            android:hint="@string/action_usn"/>
        <EditText
            android:id="@+id/ed6"
            android:layout_width="300dp"
            android:inputType="number"
            android:layout_height="35dp"
            android:backgroundTint="#fff"
            android:layout_marginBottom="20dp"
            android:background="@drawable/strokeboarder"
            android:drawableLeft="@drawable/ic_phone_android"
            android:drawablePadding="5dp"
            android:hint="@string/action_mobile"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:id="@+id/ed7"
            android:inputType="text"
            android:backgroundTint="#fff"
            android:maxLength="4"
            android:background="@drawable/strokeboarder"
            android:drawableLeft="@drawable/ic_stream"
            android:drawablePadding="5dp"
            android:hint="@string/action_stream"/>


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            android:visibility="gone"

            android:layout_marginTop="20dp"/>


        <Button
            android:layout_width="300dp"
            android:id="@+id/signup"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke2"
            android:layout_margin="25dp"
            android:text="Sign Up"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:textColor="#fff"
            android:id="@+id/login"
            android:text="Have an account? Login Here"/>


    </LinearLayout>

</ScrollView>